* clean up the progress bars and prevent the page from jumping when the user is uploading a file

--- a/dapp/src/assets/sass/_style.scss
+++ b/dapp/src/assets/sass/_style.scss
@@ -68,10 +68,6 @@ ol {
   color: white;
 }
 
-.progress {
-  margin-top: 10px;
-}
-
 not(.nav) li {
   margin-bottom: 0.5em;
 }
